--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 <body>
     <h1>Bienvenido a la tienda online de<br>Finca Tierras Catamarqueñas</h1>
     <h3>Somos productores de aceite de oliva extra virgen, nueces californianas y vinos de la mas alta calidad, directo desde Catamarca.</h3>
-    <h4 class="h4" id="bienvenida">Hola! Que estas buscando?</h4>
-    <h4>NUESTROS PRODUCTOS</h4>
+    <h4 id="bienvenida">Hola! Que estas buscando?</h4>
+    <div id="dynamicDisplay">
+        <div class="buttons">
+            <button id="seleccionProducto">Productos</button>
+            <button id="seleccionContacto">Contacto</button>
+            <button id="seleccionReclamos">Reclamos</button>
+        </div>
+        <div id="dynamicText"></div>
+    </div>
     <div class="imgcontainerred" id="imagenContainer">
         <img src="./images/Prueba tecnica Fincas Catamarqueñas.png" alt="Aceite de Oliva Extra Virgen" class="imgproducto" id="imagenAceite">
         <img src="./images/Prueba tecnica Fincas Catamarqueñas 2.png" alt="Nueces Californianas" class="imgproducto" id="imagenNueces">
