first commit no css

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <h1>Bienvenido a la tienda online de<br>Finca Tierras Catamarqueñas</h1>
     <h3>Somos productores de aceite de oliva extra virgen, nueces californianas y vinos de la mas alta calidad, directo desde Catamarca.</h3>
+    <div class="catamarcaImage">
+        <img alt="" id="unsplashImage"/>
+    </div>
     <h4 id="bienvenida">Hola! Que estas buscando?</h4>
     <div id="dynamicDisplay">
         <div class="buttons">
